menambahkan drama di api film
