# src/routes/movies.routes.js
@@ -8,6 +8,7 @@ router.get('/v1/trending',movieController.filmApikTrending)
 router.get('/v1/latest',movieController.filmApikLatest)
 router.get('/v1/download',movieController.filmApikDownload)
 router.get('/v1/search',movieController.filmApikSearch)
+router.get('/v1/streaming-drama',movieController.filmApikDramaStream)
 
 
 module.exports = router;
